crates/compiler/tests/parse_errors/import_as.elm
module Main exposing (..)

import Foo as 

x = 1
